[project]
name = "mle-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python >= "3.10,<3.12"
dependencies = [
    "crewai-tools",
    "groq>=1.0.0",
    "langchain",
    "langchain-community",
    "langchain-core",
    "langchain-groq",
    "langgraph",
    "litellm",
    "numpy>=2.4.1",
    "openai-agents>=0.6.7",
    "opendatasets>=0.1.22",
    "pandas>=2.3.3",
    "scikit-learn>=1.8.0",
]
