[project]
name = "mle-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    # Core data stack (stable, compatible)
    "opendatasets>=0.1.22",
    "scikit-learn>=1.3,<1.6",
    "numpy>=1.24,<2.0",
    "pandas>=1.5,<2.2",
    # Groq + LangChain (PRE-1.0 ecosystem — REQUIRED)
    "groq>=0.4.1,<1.0",
    "langchain-core>=0.3.68,<0.4.0",
    "langchain>=0.3.0,<0.4.0",
    "langchain-community>=0.3.0,<0.4.0",
    "langchain-groq==0.3.6",
    "langgraph>=0.0.40",
    # Agent / LLM tooling
    "litellm>=1.30,<1.50",
    "crewai-tools>=0.8.0,<1.0",
    # Web / API
    "fastapi>=0.110,<1.0",
    "streamlit>=1.30,<1.40",
]
